Sat Jul 18 17:19:49 UTC 2009  William R. Otte  <wotte@dre.vanderbilt.edu>

        * performance-tests/Benchmark/RoundTrip/RoundTrip.mpc:

          avoids_ace_for_tao.
        
Sat Jul 18 15:56:16 UTC 2009  William R. Otte  <wotte@dre.vanderbilt.edu>

        * DAnCE/NodeApplication/NodeApplication.mpc:
        * DAnCE/NodeApplicationManager/NodeApplicationManager.mpc:
        * DAnCE/NodeManager/NodeManager.mpc:
        * ciao/ComponentServer/CIAO_ComponentServer.mpc:
        * performance-tests/Benchmark/RoundTripClient/RoundTripClient.mpc:
        * performance-tests/Protocols/Receiver/Receiver.mpc:
        * performance-tests/Protocols/Sender/Sender.mpc:

          avoids_ace_for_tao.

Sat Jul 18 09:34:30 UTC 2009  Marcel Smit  <msmit@remedy.nl>

        * DAnCE/Plan_Launcher/Plan_Launcher_Base_Impl.cpp:
          Corrected a coding error during last commit.

Sat Jul 18 09:20:47 UTC 2009  Marcel Smit  <msmit@remedy.nl>

        * DAnCE/Plan_Launcher/Plan_Launcher_Base_Impl.cpp:
        * DAnCE/Starter/Starter.h:
        * DAnCE/Starter/Starter.cpp:
        * tests/CIAO_ComponentServer/Activator/client.cpp:
          Fixed UNICODE compiler errors.

Sat Jul 18 05:12:00 UTC 2009  William R. Otte  <wotte@dre.vanderbilt.edu>

        * DAnCE/Logger/Logger_Service.cpp:

          stab at some unicode problems on Windows.

Sat Jul 18 05:01:32 UTC 2009  William R. Otte  <wotte@dre.vanderbilt.edu>

        * DAnCE/ExecutionManager/ExecutionManager.mpc:
        * DAnCE/MPC/config/dance_tm_daemon.mpb:
        * DAnCE/Plan_Launcher/Plan_Launcher.mpc:
        * DAnCE/TargetManager/TargetManager.mpc:

          Static linking fixes.

Sat Jul 18 00:50:20 UTC 2009  William R. Otte  <wotte@dre.vanderbilt.edu>

        * DAnCE/Deployment/CIAO_Interfaces.mpc:

          linker fixes.

        * examples/Hello/Receiver/Receiver.mpc:

          this mpc specified more than was generated, causing it to be
          re-run.
